# sq1

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: map.txt
src/: defs.cpp  defs.h  main.cpp  pch.h  player.cpp  player.h  renderer.cpp  renderer.h  textures.cpp  textures.h  utils.cpp  utils.h
